# vanguard-ab-test

./: Vanguard_Clean_DF.ipynb  Vanguard_Clean_DF2.ipynb  levin_exploratory.ipynb  pyproject.toml  time_spend_steps.ipynb  time_steps_stats.ipynb
.ipynb_checkpoints/: README-checkpoint.md
data/clean/: guilherme.ipynb
data/clean/.ipynb_checkpoints/: Vanguard_Clean_DF-checkpoint.ipynb  guilherme-checkpoint.ipynb
notebooks/: Expl_vanguard_data_julie.ipynb  KPI_Completion_Rate.ipynb  guilherme.ipynb
notebooks/.ipynb_checkpoints/: guilherme-checkpoint.ipynb
