[project]
name = "vanguard-ab-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "vanguard-ab-test",
]
